NEW 283149
[scroll-animations] After implementing timeline-scope, imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-animation.html is crashing again
https://bugs.webkit.org/show_bug.cgi?id=283149
Summary [scroll-animations] After implementing timeline-scope, imported/w3c/web-platf...
Nikos Mouchtaris
Reported 2024-11-14 17:38:17 PST
[scroll-animations] After implementing timeline-scope, imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-animation.html is crashing again
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-21 17:39:14 PST
Nikos Mouchtaris
Comment 2 2024-11-21 20:41:41 PST
Note You need to log in before you can comment on or make changes to this bug.