[scroll-animations] After implementing timeline-scope, imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-animation.html is crashing again https://bugs.webkit.org/show_bug.cgi?id=283149 rdar://140386393

Reviewed by NOBODY (OOPS!).

To prevent a debug crash (calling value() on a calc Length), make sure to use floatValueForOffset for
view timeline inset.

* LayoutTests/TestExpectations:
* Source/WebCore/animation/ViewTimeline.cpp:
(WebCore::ViewTimeline::computeTimelineData const):